# app/Http/Controllers/API/Docs/AuthDoc.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\API\Docs;
 
 use App\Http\Requests\API\LoginRequest;
+use App\Http\Requests\API\OtpVerifyRequest;
 use App\Http\Requests\API\RegisterRequest;
 use OpenApi\Attributes as OA;
 
@@ -100,6 +101,51 @@ interface AuthDoc
         ]
     )]
     public function resentOtp();
+
+    #[OA\Post(
+        security: [["bearerAuth" => []]],
+        path: "/api/v1/verify-otp",
+        tags: ["Authentication"],
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\JsonContent(
+                required: ["otp"],
+                properties: [
+                    new OA\Property(property: "otp", type: "string", example: "123456"),
+                ]
+            )
+        ),
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: "OTP verified successfully",
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: "message", type: "string", example: "OTP verified successfully"),
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: 401,
+                description: "Error: Unauthorized",
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: "message", type: "string", example: "Unauthenticated."),
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: 429,
+                description: "Error: Too Many Requests",
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: "message", type: "string", example: "Please wait before requesting a new code."),
+                    ]
+                )
+            ),
+        ]
+    )]
+    public function verifyOtp(OtpVerifyRequest $request);
 
 
     #[OA\Post(
